fixed contrast for accessibility

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ li > a {
 }
 
 h3 {
-	color:#25aae1;
+	color: #ea186b;
 	background-size: contain !important;
 	padding-top: 8px;
 	padding-left: 60px;
@@ -338,6 +338,7 @@ li.L0,li.L1,li.L2,li.L3,li.L4,li.L5,li.L6,li.L7,li.L8, li.L9 {
 		margin-bottom:80px;
 	}
 }
+
 
 @media only screen and (max-width: 768px) {
 	[class*="col-"] {
